cluster-scope/overlays/nerc-ocp-prod/feature/external-console-access/api-proxy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-proxy
spec:
  replicas: 3
  template:
    spec:
      serviceAccountName: haproxy
      containers:
      - name: haproxy
        image: docker.io/haproxy:lts
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
          - name: haproxy-config
            mountPath: /usr/local/etc/haproxy
          - name: haproxy-state
            mountPath: /var/lib/haproxy
        securityContext:
          allowPrivilegeEscalation: false
          runAsUser: 0
      volumes:
        - name: haproxy-config
          configMap:
            name: haproxy-config
        - name: haproxy-state
          emptyDir: {}
