cluster-scope/overlays/nerc-ocp-prod/feature/external-console-access/api-proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-proxy
spec:
  ports:
  - name: http
    port: 8080
    targetPort: http
